test/Fail/NoTerminationCheck5.agda
-- 2012-03-08 Andreas
module _ where

{-# TERMINATING #-}

-- error: misplaced pragma
